javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Capture.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.io.InputStream;

public class Capture<T extends InputStream> {


}
